<resources>
    <string name="app_name">Joe Bruckner Code Test</string>
    <string name="action_settings">Settings</string>
    <string name="call">Call</string>
    <string name="update">Update</string>
    <string name="delete">delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="zip_code">Zip Code</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
